Add web-based terminal version for GitHub Pages
Co-authored-by: andreisugu <35407471+andreisugu@users.noreply.github.com>